crates/module-system/sov-modules-macros/tests/integration/constants/bech32_constant_not_a_string.stderr
error: The constant named `TEST_ARRAY_OF_U8` inside `$WORKSPACE/constants.testing.toml` should be a bech32 string, but it's not a string in the first place: `[11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11,
       11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11]`
 --> tests/integration/constants/bech32_constant_not_a_string.rs:4:50
  |
4 | const TEST_ARRAY_OF_U8: TokenId = config_bech32!("TEST_ARRAY_OF_U8", TokenId);
  |                                                  ^^^^^^^^^^^^^^^^^^
